# audiorouter

./: .gitignore  CMakeLists.txt  PRIVACY_AND_PERMISSIONS.md  PRIVACY_POLICY.md  README.md  REQUIREMENTS.md  TERMS_OF_USE.md  _XD.md  docs.html  index.html  install-local.sh  nav.js  styles.css
backend/: audiobackend.cpp  audiobackend.h
backend/data/: audiogroup.cpp  audiogroup.h  settings.cpp  settings.h
backend/models/: grouplistmodel.cpp  grouplistmodel.h  routelistmodel.cpp  routelistmodel.h  sinkinputmodel.cpp  sinkinputmodel.h  sinkmodel.cpp  sinkmodel.h
package/: metadata.json
package/contents/config/: ConfigShortcuts.qml  config.qml
package/contents/ui/: CompactRepresentation.qml  ConfigShortcuts.qml  FullRepresentation.qml  main.qml
plugin/: audiorouterapplet.cpp  audiorouterapplet.h
promo-web/: features.html  index.html  install.html  privacy-policy.html  styles.css  terms-of-use.html  theme.css
